package nmsg;

enum SeqState {
    INIT = 1;
}

message Nmsg {
    repeated NmsgPayload    payloads = 1;
    optional uint32         sequence = 2;
    optional SeqState       seq_state = 3;
}

message NmsgFragment {
    required uint32         id = 1;
    required uint32         current = 2;
    required uint32         last = 3;
    required bytes          fragment = 4;
}

message NmsgPayload {
    required uint32         vid = 1;
    required uint32         msgtype = 2;
    required int64          time_sec = 3;
    required fixed32        time_nsec = 4;
    optional bytes          payload = 5;
    optional uint32         source = 7;
    optional uint32         operator = 8;
    optional uint32         group = 9;
}
